fix fast route version

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		"symfony/http-foundation": "2.4.*",
 		"symfony/browser-kit": "2.4.*",
 		"stack/builder": "1.0.*",
-		"nikic/fast-route": "dev-master",
+		"nikic/fast-route": "dev-master@dev",
 		"wart/wart": "0.2.*",
 		"twig/twig": "1.15.*"
 	},
