--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 		"stack/builder": "1.0.*",
 		"nikic/fast-route": "dev-master@dev",
 		"illuminate/container": "4.1.*",
-		"twig/twig": "1.15.*"
+		"twig/twig": "1.15.*",
+		"monolog/monolog": "1.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "4.*",
