--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
 	"autoload": {
 		"psr-4": {
 			"Autarky\\": "src/"
-		}
+		},
+		"files": [
+			"src/functions.php"
+		]
 	},
 	"minimum-stability": "stable"
 }
