--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ matrix:
     - php: hhvm
 
 before_script:
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install --dev
+  - composer install --dev
 
 script:
   - ./vendor/bin/phpunit
