--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
 		"symfony/http-kernel": "2.4.*",
 		"symfony/http-foundation": "2.4.*",
 		"symfony/browser-kit": "2.4.*",
+		"symfony/console": "2.4.*",
 		"stack/builder": "1.0.*",
 		"nikic/fast-route": "0.1.*",
 		"illuminate/container": "4.1.*",
