add branch aliases

--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,10 @@
 			"src/functions.php"
 		]
 	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "0.2-dev"
+		}
+	},
 	"minimum-stability": "stable"
 }
