--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,11 @@
 			"src/functions.php"
 		]
 	},
+	"autoload-dev": {
+		"psr-4": {
+			"Autarky\\Tests\\": "tests/"
+		}
+	},
 	"extra": {
 		"branch-alias": {
 			"dev-master": "0.2-dev"
