--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-master": "0.2-dev"
+			"dev-0.3": "0.3-dev",
+			"dev-0.2": "0.2-dev",
+			"dev-0.1": "0.1-dev"
 		}
 	},
 	"minimum-stability": "dev",
