--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
 	},
 	"extra": {
 		"branch-alias": {
+			"dev-develop": "0.4-dev",
 			"dev-0.3": "0.3-dev",
 			"dev-0.2": "0.2-dev",
 			"dev-0.1": "0.1-dev"
