--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,10 @@ php:
   - 5.6
   - hhvm
 
-matrix:
-  allow_failures:
-    - php: hhvm
-
-before_script:
+before_install:
   - composer self-update
+
+install:
   - composer install --dev --no-interaction
 
 script:
