--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
 		}
 	],
 	"require": {
-		"symfony/http-kernel": "2.5.*",
-		"symfony/http-foundation": "2.5.*",
-		"symfony/browser-kit": "2.5.*",
-		"symfony/console": "2.5.*",
-		"stack/builder": "1.0.*",
+		"symfony/http-kernel": "~2.4",
+		"symfony/http-foundation": "~2.4",
+		"symfony/browser-kit": "~2.3",
+		"symfony/console": "~2.3",
+		"stack/builder": "~1.0",
 		"nikic/fast-route": "0.2.*",
-		"twig/twig": "1.16.*",
-		"monolog/monolog": "1.10.*"
+		"twig/twig": "~1.16",
+		"monolog/monolog": "~1.3"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "4.*",
@@ -38,7 +38,7 @@
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-develop": "0.4-dev",
+			"dev-0.4": "0.4-dev",
 			"dev-0.3": "0.3-dev",
 			"dev-0.2": "0.2-dev",
 			"dev-0.1": "0.1-dev"
