--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "4.*",
-		"mockery/mockery": "0.9.*"
+		"mockery/mockery": "0.9.*",
+		"symfony/yaml": "~2.3"
 	},
 	"autoload": {
 		"psr-4": {
