--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,9 @@
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-develop": "0.5-dev",
-			"dev-master": "0.4-dev",
+			"dev-develop": "0.6-dev",
+			"dev-master": "0.5-dev",
+			"dev-0.4": "0.4-dev",
 			"dev-0.3": "0.3-dev",
 			"dev-0.2": "0.2-dev",
 			"dev-0.1": "0.1-dev"
