--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ install:
   - composer install --dev --no-interaction
 
 script:
-  - ./vendor/bin/phpunit -c phpunit.dist.xml
+  - ./vendor/bin/phpunit
