--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,7 @@ php:
   - hhvm
 
 before_install:
-  - echo TRAVIS_PHP_VERSION: $TRAVIS_PHP_VERSION
-  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi;'
-  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi;'
-  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then echo "extension = memcache.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi;'
+  - bash ./setup-travis.bash
   - composer self-update
 
 install:
