--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,17 @@ php:
   - 5.6
   - hhvm
 
+env:
+  - COMPOSER_ARGS=""
+  - COMPOSER_ARGS="--prefer-lowest"
+
 before_install:
   - composer self-update
 
 install:
-  - composer install --dev --no-interaction
+  - composer update ${COMPOSER_ARGS} --dev --no-interaction
 
 script:
   - ./vendor/bin/phpunit
+
+sudo: false
