--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 		"monolog/monolog": "~1.3"
 	},
 	"require-dev": {
-		"mockery/mockery": "0.9.*",
+		"mockery/mockery": "~0.9.1",
 		"symfony/yaml": "~2.3"
 	},
 	"autoload": {
