remove setup-travis file, move commands to travis.ini

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,9 @@ env:
   - COMPOSER_ARGS="--prefer-lowest"
 
 before_install:
-  - bash ./setup-travis.bash
+  - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - echo "extension = memcache.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - composer self-update
 
 install:
