--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"stack/builder": "~1.0",
 		"nikic/fast-route": "0.3.*",
 		"twig/twig": "~1.16",
-		"monolog/monolog": "~1.3"
+		"psr/log": "~1.0"
 	},
 	"require-dev": {
 		"mockery/mockery": "~0.9.1",
