--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,9 @@
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-develop": "0.7-dev",
-			"dev-master": "0.6-dev",
+			"dev-develop": "0.8-dev",
+			"dev-master": "0.7-dev",
+			"dev-0.6": "0.6-dev",
 			"dev-0.5": "0.5-dev",
 			"dev-0.4": "0.4-dev",
 			"dev-0.3": "0.3-dev",
