--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 branches:
   only:
-    - develop
-    - master
+    - develop # 0.8
+    - master # 0.7
+    - 0.6
     - 0.5
     - 0.4
     - 0.3
