--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
 		"stack/builder": "~1.0",
 		"symfony/console": "~2.3",
 		"symfony/http-foundation": "~2.4",
-		"symfony/http-kernel": "~2.4",
-		"twig/twig": "~1.16"
+		"symfony/http-kernel": "~2.4"
 	},
 	"require-dev": {
+		"autarky/twig-templating": "*",
 		"mockery/mockery": "~0.9.1",
 		"symfony/yaml": "~2.3"
 	},
