--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,16 @@
 		}
 	],
 	"require": {
-		"autarky/container": "*",
+		"autarky/container": "~1.0",
 		"nikic/fast-route": "0.3.*",
 		"psr/log": "~1.0",
 		"stack/builder": "~1.0",
 		"symfony/console": "~2.3",
 		"symfony/http-foundation": "~2.4",
 		"symfony/http-kernel": "~2.4"
+	},
+	"suggest": {
+		"autarky/twig-templating": "Twig templating integration (removed from framework package in 0.8)"
 	},
 	"require-dev": {
 		"autarky/twig-templating": "*",
