fix apigen source path

--- a/apigen.neon
+++ b/apigen.neon
@@ -2,6 +2,6 @@ main: Autarky
 title: Autarky Framework API
 baseUrl: http://autarky.lutro.me/api
 source:
-	- src
+	- classes
 	
 destination: build/apigen
