--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
 		"nikic/fast-route": "0.3.*",
 		"psr/log": "~1.0",
 		"stack/builder": "~1.0",
-		"symfony/console": "~2.3",
 		"symfony/http-foundation": "~2.4",
 		"symfony/http-kernel": "~2.4"
 	},
@@ -22,9 +21,10 @@
 		"autarky/twig-templating": "Twig templating integration (removed from framework package in 0.8)"
 	},
 	"require-dev": {
-		"autarky/twig-templating": "*",
+		"autarky/twig-templating": "~1.0",
 		"mockery/mockery": "~0.9.1",
 		"monolog/monolog": "~1.3",
+		"symfony/console": "~2.3",
 		"symfony/yaml": "~2.3"
 	},
 	"autoload": {
