--- a/composer.json
+++ b/composer.json
@@ -14,18 +14,18 @@
 		"nikic/fast-route": "0.6.*",
 		"psr/log": "~1.0",
 		"stack/builder": "~1.0",
-		"symfony/http-foundation": "~2.4",
-		"symfony/http-kernel": "~2.4"
+		"symfony/http-foundation": ">=2.4",
+		"symfony/http-kernel": ">=2.4"
 	},
 	"suggest": {
 		"autarky/twig-templating": "Twig templating integration (removed from framework package in 0.8)"
 	},
 	"require-dev": {
 		"autarky/twig-templating": "~0.2",
-		"mockery/mockery": "~0.9.1",
+		"mockery/mockery": "^0.9.1",
 		"monolog/monolog": "~1.3",
-		"symfony/console": "~2.3",
-		"symfony/yaml": "~2.3"
+		"symfony/console": ">=2.3",
+		"symfony/yaml": ">=2.3"
 	},
 	"autoload": {
 		"psr-4": {
