--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
 		"autarky/twig-templating": "~0.2",
 		"mockery/mockery": "^0.9.1",
 		"monolog/monolog": "~1.3",
+		"phpunit/phpunit": "~5.0",
+		"symfony/browser-kit": ">=2.3",
 		"symfony/console": ">=2.3",
 		"symfony/yaml": ">=2.3"
 	},
