--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,9 @@
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-develop": "0.10-dev",
-			"dev-master": "0.9-dev",
+			"dev-develop": "0.11-dev",
+			"dev-master": "0.10-dev",
+			"dev-0.9": "0.9-dev",
 			"dev-0.8": "0.8-dev"
 		}
 	},
