--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
 	],
 	"require": {
 		"autarky/container": "~1.1",
-		"nikic/fast-route": "0.6.*",
+		"nikic/fast-route": "~1.0",
 		"psr/log": "~1.0",
 		"stack/builder": "~1.0",
-		"symfony/http-foundation": ">=2.4",
-		"symfony/http-kernel": ">=2.4"
+		"symfony/http-foundation": "~2.4|~3.0",
+		"symfony/http-kernel": "~2.4|~3.0"
 	},
 	"suggest": {
 		"autarky/twig-templating": "Twig templating integration (removed from framework package in 0.8)"
@@ -24,10 +24,10 @@
 		"autarky/twig-templating": "~0.2",
 		"mockery/mockery": "^0.9.1",
 		"monolog/monolog": "~1.3",
-		"phpunit/phpunit": ">=4.8",
-		"symfony/browser-kit": ">=2.3",
-		"symfony/console": ">=2.3",
-		"symfony/yaml": ">=2.3"
+		"phpunit/phpunit": "~4.8|~5.0",
+		"symfony/browser-kit": "~2.3|~3.0",
+		"symfony/console": "~2.3|~3.0",
+		"symfony/yaml": "~2.3|~3.0"
 	},
 	"autoload": {
 		"psr-4": {
