--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
 		"phpunit/phpunit": "~4.8|~5.0",
 		"symfony/browser-kit": "~2.3|~3.0",
 		"symfony/console": "~2.3|~3.0",
-		"symfony/yaml": "~2.3|~3.0"
+		"symfony/yaml": "~2.3|~3.0",
+		"symfony/polyfill-php70": "~1.0"
 	},
 	"autoload": {
 		"psr-4": {
