--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 		"autarky/twig-templating": "~0.2",
 		"mockery/mockery": "^0.9.1",
 		"monolog/monolog": "~1.3",
-		"phpunit/phpunit": ">=4.8",
+		"phpunit/phpunit": ">=4.8, <6",
 		"symfony/browser-kit": ">=2.3",
 		"symfony/console": ">=2.3",
 		"symfony/yaml": ">=2.3"
