--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,15 @@ branches:
     - 0.9
 
 language: php
+dist: xenial
+sudo: false
 
 php: 
-  - 5.4
-  - 5.5
-  - 5.6
   - 7.0
   - 7.1
   - 7.2
+  - 7.3
+  - 7.4
 
 env:
   - COMPOSER_ARGS=""
@@ -26,8 +27,6 @@ install:
 
 script:
   - ./vendor/bin/phpunit --verbose
-
-sudo: false
 
 cache:
   directories:
